--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
   height: 50px;
 }
 
+  a:-webkit-any-link { text-decoration: none !important;
+    color: black;}
+
 .brand {
   position: absolute;
   padding-left: 10px;
@@ -108,6 +111,7 @@ nav ul li ul li a {
     margin-left: 70px;
     line-height: 10px;
   }
+    
   nav ul li ul li a {
     padding-left: 0px;
   }
