--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 .navigation {
-  height: 50px;
+  height: 70px;
+  width:100%;
+  background-color: white;
+  z-index: 1000;
+  top:0;
+  left:0;
 }
 
   a:-webkit-any-link { text-decoration: none !important;
@@ -20,27 +25,31 @@ line-height: 18px;
   color: #ffffff;
   text-decoration: none;
     color: black;
+    padding-top: 1px;
 }
 
 .nav-container {
-  max-width: 1000px;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
 nav {
+  position: relative;
   float: right;
 }
 nav ul {
   list-style: none;
-  margin: 0;
+  margin-left: -10px;
+  margin-top: 0;
     background-color: white;
     padding-bottom: 20px;
-    padding-left: 10px;
+padding-left: 20px;
+      padding-top: 1px;
 }
 nav ul li {
   float: left;
   position: relative;
-    margin-right: 50px;
+  margin-right: 60px;
 }
 
 nav ul li a:last-child{
@@ -52,7 +61,7 @@ nav ul li a:visited {
   display: block;
   padding-left: 0px;
     margin-top: 30px;
-  line-height: 18px;
+  line-height: 20px;
   color: black;
   text-decoration: none;
 }
@@ -109,7 +118,8 @@ nav ul li ul li a {
   }
   nav ul li a {
     margin-left: 70px;
-    line-height: 10px;
+    line-height: 20px;
+    width: 300px;
   }
     
   nav ul li ul li a {
@@ -124,6 +134,10 @@ nav ul li ul li a {
 @media screen and (min-width: 800px) {
   .nav-list {
     display: block !important;
+  }
+
+  .navigation{
+  	position: fixed;
   }
 }
 #nav-toggle {
