--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -37,6 +37,16 @@
     padding: 0 20px;
     box-sizing: border-box;
 }
+
+
+.gallery-container {
+    position: relative;
+    width: 100%;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
 .column,
 .columns {
     width: 100%;
@@ -57,6 +67,10 @@
 
 @media (min-width: 550px) {
     .container {
+        width: 80%;
+    }
+
+    .gallery-container {
         width: 80%;
     }
     .column,
@@ -367,8 +381,6 @@ p a:before {
   -webkit-transform-origin: left center;
           transform-origin: left center;
 }
-
-
 
 /* Custom Classes
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
