--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -264,7 +264,7 @@ h3 {
 
 h4 {
     font-family: 'GTSectra-Book';
-    font-size: 1.5em;
+    font-size: 1.3em;
     line-height: 1.3;
     letter-spacing: -.001rem;
 }
@@ -285,11 +285,29 @@ h6 {
 }
 
 .about-link {
-    font-family: 'GTSectra-BookItalic';
+    font-size: 1.6rem;
+    line-height: 1;
+    font-family: 'Px Grotesk';
+    font-weight: 300;
+    font-style: normal;
+    margin-top: 5%;
 }
 
 .about-link:hover{
-    font-family: 'GTSectra-Book';
+    color: ;
+}
+
+.contact-link {
+    font-size: 1.6rem;
+    line-height: 1;
+    font-family: 'Px Grotesk';
+    font-weight: 300;
+    font-style: normal;
+    margin-top: 5%;
+}
+
+.contact-link:hover{
+    font-family: 'GTSectra-BookItalic';
 }
 
 
